--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# costumer
+.idea/
+target/
+*.iml
+*.mvn
+*mvnw
+*mvnw.cmd
